--- a/force-app/main/default/layouts/Custom_Location__c-Custom Location Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Custom_Location__c-Custom Location Layout.layout-meta.xml
@@ -11,15 +11,16 @@
                 <field>Name</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Required</behavior>
-                <field>Custom_Location__c</field>
-            </layoutItems>
-            <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Session_Name__c</field>
+                <field>Location__c</field>
             </layoutItems>
         </layoutColumns>
-        <layoutColumns/>
+        <layoutColumns>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>OwnerId</field>
+            </layoutItems>
+        </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
     </layoutSections>
     <layoutSections>
