--- a/force-app/main/default/lwc/sharedCSS/sharedCSS.css
+++ b/force-app/main/default/lwc/sharedCSS/sharedCSS.css
@@ -7,17 +7,17 @@ h1 {
 .button {
     background-color: #04AA6D;
     border: none;
-    color: white;
-    padding: 20px;
+    color: brandHeader;
+    padding: squareIconUtilityMedium;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
+    font-size: fontSize5;
+    margin: spacingXxSmall borderWidthThick;
   }
   
-  .button1 {border-radius: 2px;}
-  .button2 {border-radius: 4px;}
-  .button3 {border-radius: 8px;}
-  .button4 {border-radius: 12px;}
-  .button5 {border-radius: 50%;}
+  .button1 {border-radius: borderRadiusSmall;}
+  .button2 {border-radius: borderRadiusMedium;}
+  .button3 {border-radius: borderRadiusCircle;}
+  .button4 {border-radius: spacingSmall;}
+  .button5 {border-radius: borderRadiusCircle;}
